@@ -43,6 +43,9 @@
         [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_EXCLUDE_MEDIA_FOLDERS" desc="BLISSMIXER_ANALYSER_EXCLUDE_MEDIA_FOLDERS_DESC" %]
         <textarea class="stdedit" name="pref_analyser_ignore_dirs" id="analyser_ignore_dirs" cols="80" rows="3">[% prefs.analyser_ignore_dirs %]</textarea>
         [% END %]
+        [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_IGNORE" desc="BLISSMIXER_ANALYSER_IGNORE_DESC" %]
+        <textarea class="stdedit" name="pref_analyser_ignore_txt" id="analyser_analyser_ignore_txt" cols="80" rows="3">[% prefs.analyser_ignore_txt %]</textarea>
+        [% END %]
         [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_MAX_FILES" desc="BLISSMIXER_ANALYSER_MAX_FILES_DESC" %]
         <input type="text" class="stdedit sliderInput_0_10000_50" name="pref_analyser_max_files" id="analyser_max_files" value="[% prefs.analyser_max_files %]" size="5">
         [% END %]
@@ -62,31 +65,31 @@
         <div style="opacity:0.6">[% "BLISSMIXER_MIX_SETTINGS_NOTE" | string %]</div><br/>
 
         [% WRAPPER settingGroup title="BLISSMIXER_NO_REPEAT_ARTIST" desc="BLISSMIXER_NO_REPEAT_ARTIST_DESC" %]
-            <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_artist" id="no_repeat_artist" value="[% prefs.no_repeat_artist %]" size="5">
+        <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_artist" id="no_repeat_artist" value="[% prefs.no_repeat_artist %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_NO_REPEAT_ALBUM" desc="BLISSMIXER_NO_REPEAT_ALBUM_DESC" %]
-            <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_album" id="no_repeat_album" value="[% prefs.no_repeat_album %]" size="5">
+        <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_album" id="no_repeat_album" value="[% prefs.no_repeat_album %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_NO_REPEAT_TRACK" desc="BLISSMIXER_NO_REPEAT_TRACK_DESC" %]
-            <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_track" id="no_repeat_track" value="[% prefs.no_repeat_track %]" size="5">
+        <input type="text" class="stdedit sliderInput_0_200_1" name="pref_no_repeat_track" id="no_repeat_track" value="[% prefs.no_repeat_track %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_MIN_DURATION" desc="BLISSMIXER_MIN_DURATION_DESC" %]
-            <input type="text" class="stdedit" name="pref_min_duration" id="min_duration" value="[% prefs.min_duration %]" size="5">
+        <input type="text" class="stdedit" name="pref_min_duration" id="min_duration" value="[% prefs.min_duration %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_MAX_DURATION" desc="BLISSMIXER_MAX_DURATION_DESC" %]
-            <input type="text" class="stdedit" name="pref_max_duration" id="max_duration" value="[% prefs.max_duration %]" size="5">
+        <input type="text" class="stdedit" name="pref_max_duration" id="max_duration" value="[% prefs.max_duration %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_MAX_BPM_DIFF" desc="BLISSMIXER_MAX_BPM_DIFF_DESC" %]
-            <input type="text" class="stdedit sliderInput_0_200_5" name="pref_max_bpm_diff" id="max_bpm_diff" value="[% prefs.max_bpm_diff %]" size="5">
+         <input type="text" class="stdedit sliderInput_0_200_5" name="pref_max_bpm_diff" id="max_bpm_diff" value="[% prefs.max_bpm_diff %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_NUM_DSTM_TRACKS" desc="BLISSMIXER_NUM_DSTM_TRACKS_DESC" %]
-            <input type="text" class="stdedit sliderInput_2_20_1" name="pref_dstm_tracks" id="dstm_tracks" value="[% prefs.dstm_tracks %]" size="5">
+        <input type="text" class="stdedit sliderInput_2_20_1" name="pref_dstm_tracks" id="dstm_tracks" value="[% prefs.dstm_tracks %]" size="5">
         [% END %]
 
         [% WRAPPER settingGroup title="BLISSMIXER_USE_FOREST" desc="BLISSMIXER_USE_FOREST_DESC" %]
@@ -127,16 +130,16 @@
         <div style="opacity:0.6">[% "BLISSMIXER_METRICS_NOTE" | string %]</div><br/>
 
         [% WRAPPER settingGroup title="BLISSMIXER_METRIC_TEMPO" %]
-            <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_tempo" id="weight_tempo" value="[% prefs.weight_tempo %]" size="5">
+        <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_tempo" id="weight_tempo" value="[% prefs.weight_tempo %]" size="5">
         [% END %]
         [% WRAPPER settingGroup title="BLISSMIXER_METRIC_TIMBRE" %]
-            <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_timbre" id="weight_timbre" value="[% prefs.weight_timbre %]" size="5">
+        <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_timbre" id="weight_timbre" value="[% prefs.weight_timbre %]" size="5">
         [% END %]
         [% WRAPPER settingGroup title="BLISSMIXER_METRIC_LOUDNESS" %]
-            <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_loudness" id="weight_loudness" value="[% prefs.weight_loudness %]" size="5">
+        <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_loudness" id="weight_loudness" value="[% prefs.weight_loudness %]" size="5">
         [% END %]
         [% WRAPPER settingGroup title="BLISSMIXER_METRIC_CHROMA" %]
-            <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_chroma" id="weight_chroma" value="[% prefs.weight_chroma %]" size="5">
+        <input type="text" class="stdedit sliderInput_1_100_1" name="pref_weight_chroma" id="weight_chroma" value="[% prefs.weight_chroma %]" size="5">
         [% END %]
         </div>
     [% END %]
