@@ -4,6 +4,7 @@
 2. Fix invoking analysis when LMS scans for music.
 3. Show analysis start date/time and duration in settings page.
 4. Add options to configure max files and threads of analyser.
+5. Add option to configure ignoring of tracks.
 
 0.8.0
 -----
